Fix container vertical alignment in Query

--- a/src/blocks/query-loop/editor.scss
+++ b/src/blocks/query-loop/editor.scss
@@ -16,10 +16,6 @@
 					height: 100%;
 					margin-left: 0;
 					margin-right: 0;
-
-					& > .gb-container {
-						height: 100%;
-					}
 				}
 			}
 
@@ -29,10 +25,6 @@
 
 				& > .gb-grid-column {
 					height: 100%;
-
-					& > .gb-container {
-						height: 100%;
-					}
 				}
 			}
 		}
